chore(gmap): basic google map

--- a/package.json
+++ b/package.json
@@ -89,6 +89,8 @@
     "express": "^4.13.3",
     "express-http-proxy": "^0.11.0",
     "file-loader": "^0.11.1",
+    "fs": "0.0.1-security",
+    "google-map-react": "^0.24.0",
     "hoist-non-react-statics": "^1.2.0",
     "humps": "^2.0.0",
     "invariant": "^2.2.1",
