--- a/package.json
+++ b/package.json
@@ -85,6 +85,8 @@
     }
   },
   "dependencies": {
+    "async-decorators": "^0.1.5",
+    "classnames": "^2.2.5",
     "compression": "^1.6.0",
     "express": "^4.13.3",
     "express-http-proxy": "^0.11.0",
@@ -93,6 +95,7 @@
     "google-map-react": "^0.24.0",
     "hoist-non-react-statics": "^1.2.0",
     "humps": "^2.0.0",
+    "immutable": "^3.8.1",
     "invariant": "^2.2.1",
     "isomorphic-fetch": "^2.2.1",
     "less": "^2.5.3",
@@ -100,9 +103,11 @@
     "lodash": "^4.13.1",
     "normalizr": "^3.2.2",
     "react": "^15.4.2",
+    "react-controllables": "^0.6.0",
     "react-dom": "^15.4.2",
     "react-ga": "^2.1.0",
     "react-helmet": "^5.0.2",
+    "react-pure-render": "^1.0.2",
     "react-redux": "^5.0.3",
     "react-router": "^2.5.2",
     "redux": "^3.5.2",
