--- a/package.json
+++ b/package.json
@@ -108,8 +108,9 @@
     "react-ga": "^2.1.0",
     "react-helmet": "^5.0.2",
     "react-pure-render": "^1.0.2",
-    "react-redux": "^5.0.3",
+    "react-redux": "^5.0.5",
     "react-router": "^2.5.2",
+    "react-router-redux": "^4.0.8",
     "redux": "^3.5.2",
     "redux-logger": "^3.0.1",
     "redux-saga": "^0.14.5",
