--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "lodash": "^4.13.1",
     "normalizr": "^3.2.2",
     "react": "^15.4.2",
+    "react-bootstrap": "^0.31.0",
     "react-controllables": "^0.6.0",
     "react-dom": "^15.4.2",
     "react-ga": "^2.1.0",
@@ -112,8 +113,11 @@
     "react-router": "^2.5.2",
     "react-router-redux": "^4.0.8",
     "redux": "^3.5.2",
+    "redux-actions": "^2.0.3",
+    "redux-immutable": "^4.0.0",
     "redux-logger": "^3.0.1",
     "redux-saga": "^0.14.5",
+    "reselect": "^3.0.1",
     "scroll-behavior": "^0.8.2",
     "serialize-javascript": "^1.1.2",
     "serve-favicon": "^2.3.0",
