feat(property-table): property table component & sync with redux store

--- a/.env.development
+++ b/.env.development
@@ -2,6 +2,7 @@ NODE_ENV=development
 HOST=localhost
 PORT=3000
 API_URL="https://api.github.com"
+IMG_BASE_URL="https://i.palmettopark.com/"
 GOOGLE_ANALYTIC_ID="UA-XXXXXXXX-X"
 APP_TITLE="React Realty"
 APP_DESCRIPTION="React Realty MVP"
