--- a/.env.production
+++ b/.env.production
@@ -2,6 +2,7 @@ NODE_ENV=production
 HOST=localhost
 PORT=8080
 API_URL="https://api.github.com"
+IMG_BASE_URL="https://i.palmettopark.com/"
 GOOGLE_ANALYTIC_ID="UA-XXXXXXXX-X"
 APP_TITLE="React Realty"
 APP_DESCRIPTION="React Realty MVP"
