--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "react-dom": "^15.4.2",
     "react-ga": "^2.1.0",
     "react-helmet": "^5.0.2",
+    "react-infinite": "^0.11.0",
     "react-pure-render": "^1.0.2",
     "react-redux": "^5.0.5",
     "react-router": "^2.5.2",
