--- a/.env.production
+++ b/.env.production
@@ -4,5 +4,6 @@ PORT=8080
 API_URL="https://api.github.com"
 IMG_BASE_URL="https://i.palmettopark.com/"
 GOOGLE_ANALYTIC_ID="UA-XXXXXXXX-X"
+GOOGLE_MAP_KEY="AIzaSyB-CtHqhqJ87_Fd7PYem-_pchuI8A2vbLE"
 APP_TITLE="React Realty"
 APP_DESCRIPTION="React Realty MVP"
