feat(react-slick): carousel implementation + bootstrap removed for semantic-ui

--- a/.env.development
+++ b/.env.development
@@ -2,7 +2,7 @@ NODE_ENV=development
 HOST=localhost
 PORT=3000
 API_URL="https://api.github.com"
-IMG_BASE_URL="https://i.palmettopark.com/"
+IMG_BASE_URL="https://i.palmettopark.net/"
 GOOGLE_ANALYTIC_ID="UA-XXXXXXXX-X"
 GOOGLE_MAP_KEY="AIzaSyB-CtHqhqJ87_Fd7PYem-_pchuI8A2vbLE"
 APP_TITLE="React Realty"
