--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "less-loader": "^2.2.1",
     "lodash": "^4.13.1",
     "normalizr": "^3.2.2",
+    "query-string": "^4.3.4",
     "react": "^15.4.2",
     "react-controllables": "^0.6.0",
     "react-dom": "^15.4.2",
