--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "immutable": "^3.8.1",
     "invariant": "^2.2.1",
     "isomorphic-fetch": "^2.2.1",
+    "jquery": "^3.2.1",
     "less": "^2.5.3",
     "less-loader": "^2.2.1",
     "lodash": "^4.13.1",
