--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "less": "^2.5.3",
     "less-loader": "^2.2.1",
     "lodash": "^4.13.1",
+    "mongoose": "^4.11.0",
     "normalizr": "^3.2.2",
     "query-string": "^4.3.4",
     "react": "^15.4.2",
