--- a/package.json
+++ b/package.json
@@ -76,8 +76,10 @@
     "less": "^2.5.3",
     "less-loader": "^2.2.1",
     "lodash": "^4.13.1",
+    "moment": "^2.18.1",
     "mongoose": "^4.11.0",
     "normalizr": "^3.2.2",
+    "plus.transformer": "^1.0.5",
     "query-string": "^4.3.4",
     "react": "^15.4.2",
     "react-controllables": "^0.6.0",
