feat(mongoose): added mongoose and property route

--- a/.env.development
+++ b/.env.development
@@ -8,3 +8,4 @@ GOOGLE_MAP_KEY="AIzaSyB-CtHqhqJ87_Fd7PYem-_pchuI8A2vbLE"
 GOOGLE_PLACE_API_KEY="AIzaSyAbEQZUXjNs6LhELi6g3yWinnBtGDCMMdA"
 APP_TITLE="React Realty"
 APP_DESCRIPTION="React Realty MVP"
+MONGO_URL="mongodb://localhost:27017/palmettopark-production"
