--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "reselect": "^3.0.1",
     "resolve-url-loader": "^1.6.1",
     "scroll-behavior": "^0.8.2",
+    "semantic-ui-css": "^2.2.10",
     "semantic-ui-react": "^0.68.5",
     "serialize-javascript": "^1.1.2",
     "serve-favicon": "^2.3.0",
