feat(property-detail): property detail page SSR with meta

--- a/.env.development
+++ b/.env.development
@@ -1,7 +1,8 @@
 NODE_ENV=development
 HOST=localhost
 PORT=3000
-API_URL="http://45.77.64.222:9200"
+API_URL="http://localhost:3000"
+ES_API_URL="http://45.77.64.222:9200"
 IMG_BASE_URL="https://i.palmettopark.net/"
 GOOGLE_ANALYTIC_ID="UA-XXXXXXXX-X"
 GOOGLE_MAP_KEY="AIzaSyB-CtHqhqJ87_Fd7PYem-_pchuI8A2vbLE"
