--- a/package.json
+++ b/package.json
@@ -31,16 +31,14 @@
       "command": "node ./bin/server.js",
       "env": {
         "NODE_PATH": "./src",
-        "NODE_ENV": "production",
-        "PORT": 8080
+        "NODE_ENV": "production"
       }
     },
     "start-dev": {
       "command": "node ./bin/server.js",
       "env": {
         "NODE_PATH": "./src",
-        "NODE_ENV": "development",
-        "PORT": 3000
+        "NODE_ENV": "development"
       }
     },
     "watch-client": {
