--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "jquery": "^3.2.1",
     "less": "^2.5.3",
     "less-loader": "^2.2.1",
+    "limax": "^1.5.0",
     "lodash": "^4.13.1",
     "moment": "^2.18.1",
     "mongoose": "^4.11.0",
